# huan

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  MEMORY.md  README.md  SOUL.md  USER.md  pyproject.toml
.hermes/plugins/trading-companion/: __init__.py  plugin.yaml
.hermes/skills/briefing/: SKILL.md
.hermes/skills/debrief/: SKILL.md
.hermes/skills/macro/: SKILL.md
.hermes/skills/trading/market-context/: SKILL.md
.hermes/skills/validate/: SKILL.md
tests/integration/: test_wiki_api.py
tests/unit/: test_wiki_models.py  test_wiki_service.py
trading-agent/: .env.local.example  README.md  docker-compose.yml  fix_all.py  fix_workflows.py  import_workflows.sh  start.sh
trading-agent/workflows/: cot_weekly_update.json  critical_event_alert.json  crypto_funding_rates.json  crypto_global_metrics.json  crypto_oi_liquidations.json  crypto_snapshot_aggregator.json  economic_calendar_daily.json  news_monitor_realtime.json  premarket_briefing.json  price_feed_yahoo.json  sentiment_snapshot.json
trading_companion/: __init__.py  agent.py  main.py  plugin.py  ui.py
trading_companion/agents/: __init__.py  wiki_agent.py
trading_companion/core/: __init__.py  config.py  exceptions.py
trading_companion/journal/: db.py
trading_companion/screener/: core.py
trading_companion/strategies/: monitor.py
trading_companion/tools/: __init__.py  heartbeat_monitor.py  heartbeat_tools.py  journal_tools.py  loris_tools.py  market_data.py  screener_tools.py  strategy_tools.py  wiki_context.py
trading_companion/wiki/: __init__.py
trading_companion/wiki/api/: __init__.py  wiki_api.py
trading_companion/wiki/content/seeds/data_analysis/: indicadores.md
trading_companion/wiki/content/seeds/psicologia_trading/: sesgos_cognitivos.md
trading_companion/wiki/content/seeds/regulacion/: marco_legal.md
trading_companion/wiki/content/seeds/trading/: analisis_tecnico.md  fundamentos.md  gestion_riesgo.md
trading_companion/wiki/content/seeds/trading_bots/: arquitectura.md
trading_companion/wiki/content/seeds/trading_systems/: mean_reversion.md  n8n_arquitectura.md  n8n_modulo_08_precios.md  n8n_modulo_09_funding.md  n8n_modulo_09a_funding.md  n8n_modulo_09b_oi_liquidations.md  n8n_modulo_09c_global.md  n8n_modulo_10_aggregator.md  n8n_modulos.md  price_action.md  prompt_analisis_evento_macro.md  prompt_debrief_post_sesion.md  prompt_validacion_setup.md  prompts_agente.md  system_prompt_maestro.md
trading_companion/wiki/models/: __init__.py  branch.py  node.py  relationship.py
trading_companion/wiki/repository/: __init__.py  markdown_store.py  search_index.py
trading_companion/wiki/services/: __init__.py  knowledge_graph.py  query_service.py  wiki_service.py
