[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme>=22.5.0"]
build-backend = "hatchling.build"

[project]
name = "trading-companion"
version = "0.2.0"
description = "AI-powered trading companion and advisor — Hermes Agent plugin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Trading Companion Team" }
]
keywords = ["trading", "ai", "companion", "advisor", "hermes", "agent", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "hermes-agent>=0.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx[socks]>=0.28.1",
    "pyyaml>=6.0.1",
    "networkx>=3.2",
    "yfinance>=0.2.50",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
legacy = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.entry-points."hermes_agent.plugins"]
trading-companion = "trading_companion.plugin:register"

[tool.hatch.build.targets.wheel]
packages = ["trading_companion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "ANN"]

[tool.coverage.run]
source = ["trading_companion"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
